  * reportbug/ui/text_ui.py
    - if help option is selected in debconf values inclusion menu, the second
      message doesn't contain newline, it's fixed now; thanks to Miroslaw
      Zalewski for the report; Closes: #560302
    - retrieve the package information from the report using doing a lower-case
      check; thanks to Dan Greene for the report; Closes: #562912
  * share/presubj
    - refer to reportbug.d.o instead of bugs.d.o as SMTP server; thanks to Karl
      Goetz for the report and patch; Closes: #561802
  * doc/README.{developers, source}
    - fix them to be valid reStrucuturedText files; thanks to Jakub Wilk for the
      report; Closes: #563051
  * debian/{control,rules,source.lintian-overrides}, man/reportbug.ja.1, po4a/*
    - removed l10n contents: they were always outdated and just a restrict set
      of the languages Debian supports
  * man/{querybts.1, reportbug.1}
    - removed NOTE about Python's getopt: both tools are now using optparse
      module to retrieve CLI parameters
  * bin/reportbug
    - notify the user that editing the report with a MUA in the last menu will
      loose every attachements; thanks to Guido Trotter for the report and to
      those that follow it up; Closes: #211808
    - add the possibility to specify the X-Debbugs-CC in the menu before report
      submission; thanks to Sean Finney, Michael Gilbert and Branden Robinson
      for the report and to Carl Chenet for the patch; Closes: #349690
    - clarified that the saved report to a temporary file can also be recovered
      copying the text into a MUA and send the bug from there; thanks to Nelson
      A. de Oliveira for the report; Closes: #405093
  * man/reportbug.conf.5
    - clarified the configuration files has to be UTF-8 documents; thanks to
      Anders Lageras for the report; Closes: #417054
  * reportbug/ui/urwid_ui.py
    - when retrieving a string, also show a default text (if preset), useful in